fixing overflow and some mediaquery

--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ body {
     background-image: url(./images/bg-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden;
     font-family: var(--font-opensans);
  
 }
@@ -44,7 +45,7 @@ header {
 
 .content-wraper p {
     font-size: 18px;
-    width: 100%;
+    width: 70%;
 }
 
 .main-button {
@@ -86,15 +87,29 @@ header {
    text-decoration: none;
 }
 
-@media screen and (max-width: 1200px ) {
+@media screen and (max-width: 1200px) {
     
+    body {
+        overflow: scroll;
+    }
+
     .main-wraper{
         display: block;
         height: 100%;
         margin: 0 auto;
     }
 
+    .content-wraper {
+        width: 100%;
+    }
+
+    .content-wraper p{
+        width: 100%;
+    }
+
 }
+
+
 
 @media screen and (max-width: 376px) {
     body {
@@ -124,6 +139,7 @@ header {
 
     .content-wraper p{
         font-size: 16px ;
+        width: 100%;
     }
 
     .footer {
